# devin-kattis

./: .gitignore  README.md  download_problems.sh  easy.txt  problems.txt  prompt.py  pyproject.toml  scrape.py  test.py
DeepSeek-Coder-V2-Lite-Instruct-4bit-mlx/: 10kindsofpeople.py  1dfroggereasy.py  246greaaat.py  24game.py  2naire.py  3dprinter.py  3sideddice.py  8queens.py  99problems.py  99problems2.py  a1paper.py  aaah.py  abandonedanimal.py  aboveaverage.py  abstractpainting.py  accessdenied.py  addingwords.py  administrativeproblems.py  adolescentarchitecture.py  ads.py  adventuremoving4.py  agamemnonsodyssey.py  aijeopardy.py  airfaregrants.py  airlinehub.py  airports.py  akcija.py  alchemy101.py  alchemy2.py  alehouse.py  aleidibio.py  alicedigital.py  alienmath.py  aliennumbers.py  allaboutthatbase.py  allergentesting.py  alloys.py  almostsorted.py  alphabetspam.py  ameriskur.py  (+1369 more)
aaah/: main.py
anothercandies/: kattis.yml  main.py
favourable/: main.py
hello/: kattis.yml
heritage/: main.py
interview/: kattis.yml  main.py
interview/samples/: interview-01.in
narrowartgallery/: kattis.yml  main.py
polymul1/: main.py
problems/10kindsofpeople/: kattis.yml  problem.html
problems/1dfroggereasy/: kattis.yml  problem.html
problems/1dfroggerhard/: kattis.yml  main.py  problem.html
problems/1sforall/: kattis.yml  main.py  problem.html
problems/2048/: kattis.yml  main.py  problem.html
problems/246greaaat/: kattis.yml  problem.html
problems/24game/: kattis.yml  problem.html
problems/2naire/: kattis.yml  problem.html
velkomin/: kattis.yml
(+8787 files in other folders)
